--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ sudo: required
 services:
   - docker
 before_install:
+  - docker --version
   - docker build -t imranawsdevops/new_app:v1.0 .
 script:
   - echo "$password" | docker login -u "$username" --password-stdin
